# http_chat_room

./: CMakeLists.txt  config.ini  server
backend/include/: EpollReactor.h  base64.h  config.h  database.h  global.h  http_handler.h  http_header.h  logger.h  message.h  router.h  server.h  simple_json.h  thread_poor.h
backend/src/: base64.cpp  client.cpp  config.cpp  global.cpp  http_handler.cpp  message.cpp  router.cpp  server.cpp  server2.cpp  sha1.cpp
backend/test/: database  test_connect.cpp  test_log_reg  test_log_reg.cpp  websocket_accept_test.cpp
backend/utils/: database.cpp  logger.cpp
frontend/: chat.html  index.html  script.js  styles.css
frontend/css/: auth.css  chat.css
frontend/js/: auth.js  chat.js  config.js
